--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ canvas {
     display: block;
     width: 100vw;
     height: 100vh;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 #resetBtn {
